# iron-ledger

./: .gitignore  README.md  install.sh  run.sh  setup.sh
.githooks/: pre-commit
client/: index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
client/src/: App.svelte  AppShell.svelte  Body.svelte  ExerciseCard.svelte  Exercises.svelte  Graphs.svelte  LineChart.svelte  Login.svelte  Routines.svelte  Today.svelte  Watch.svelte  WatchRoute.svelte  app.css  main.js
deploy/: cloudflared-config.yml
docs/: DATA-MIGRATION.md  DESIGN.md  FEEDBACK-template.md  FEEDBACK-week1.md  FEEDBACK.md  HANDOFF.md  PRODUCTION-READINESS.md  ROADMAP.md  TEAM.md  UNIT-MODEL.md
phases/phase0-skeleton/: FEEDBACK-phase0-1.md
phases/phase1-auth-sync/: CLOSEOUT.md  CONTRACT-phase1.md  FEEDBACK-phase1-1.md  REVIEW-advocate.md  REVIEW-codex-round2.md  REVIEW-codex-round3.md  REVIEW-codex.md  REVIEW-summary.md
phases/phase2a-library-templates/: BRAINSTORM-phase2.md  CLOSEOUT.md  CONTRACT-phase2a.md  FEEDBACK-phase2a-1.md  REVIEW-codex-round2.md  REVIEW-codex-round3.md  REVIEW-codex-round4.md  REVIEW-codex-round5.md  REVIEW-codex.md  REVIEW-summary.md
phases/phase2b-today-logging/: CLOSEOUT.md  CONTRACT-phase2b.md  FEEDBACK-phase2b-1.md  FEEDBACK-phase2b-triage.md  REVIEW-codex-round2.md  REVIEW-codex-round3.md  REVIEW-codex.md  (+5 more)
scripts/: backup.sh  check-public-deps.sh  may2026_spec.json  redeploy.sh  seed_may2026.py  serve.sh
server/: .env.example  pyproject.toml
server/app/: auth.py  config.py  events.py  main.py  routes_auth.py  routes_sync.py  storage.py
(+29 files in other folders)
